[project]
name = "pj"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrey",email = "ggread123@gmail.com"}
]
#readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8 (>=7.1.1,<8.0.0)",
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
)/
'''

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"

[tool.isort]
profile = "black"
multi_line_output = 3
#line-length = 119


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.14.1"

